addtional changes made to css for shop.css

--- a/episode-list.html
+++ b/episode-list.html
@@ -16,7 +16,7 @@
 <!--NavBar Section-->
     <nav  id="navbar" class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/landing_page.html">LOGO IMG</a>
+          <a class="navbar-brand" href="/landing_page.html">Monster Mansion Podcast</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -83,7 +83,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/ep img 1.jpg" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 1.jpg" class="card-img-top" alt="..." style="width:100%; height:800px"></a>
             <div class="card-body">
               <h5 class="card-title">Little Shop of Horrors</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -95,7 +95,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/ep img 2.jpg" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 2.jpg" class="card-img-top" alt="..." style="width:100%; height:800px"></a>
             <div class="card-body">
               <h5 class="card-title">Arachnophobia</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -107,22 +107,9 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/ep img 3.jpg" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 3.jpg" class="card-img-top" alt="..." style="width:100%; height:800px"></a>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">Posted </small>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <a href="#"><img src="/Website Assests/ep img 4.jpg" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Creature from the Black Lagoon</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
@@ -132,9 +119,9 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/ep img 5.jpg" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 4.jpg" class="card-img-top" alt="..." style="width:100%; height:800px"></a>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Dracula</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
@@ -144,9 +131,9 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/ep img 6.jpg" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 5.jpg" class="card-img-top" alt="..." style="width:100%; height:800px"></a>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">The Thing</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
@@ -156,9 +143,9 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/ep img 7.jpg" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 6.jpg" class="card-img-top" alt="..." style="width:100%; height:800px"></a>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Bats</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
@@ -168,9 +155,9 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/ep img 8.jpg" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 7.jpg" class="card-img-top" alt="..." style="width:100%; height:800px"></a>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Fright Night</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
@@ -180,9 +167,21 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/ep img 9.jpg" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 8.jpg" class="card-img-top" alt="..." style="width:100%; height:800px"></a>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">The Relic</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
+            </div>
+            <div class="card-footer">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/ep img 9.jpg" class="card-img-top" alt="..." style="width:100%; height:800px"></a>
+            <div class="card-body">
+              <h5 class="card-title">Killer Klowns from Outer Space</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
