--- a/landing_page.html
+++ b/landing_page.html
@@ -65,6 +65,7 @@
     </button>
   </div>
 
+  <div class="carousel-accent-div"></div>
 <!--shop and episode buttons-->
 <div class="link-container">
 <ul>
