--- a/shop.html
+++ b/shop.html
@@ -122,7 +122,11 @@
 
     <!--Cart Section-->
     <section class="cart-sec">
-      <h2>Checkout</h2>
+      <div class="checkout-container">
+        <div class="page-title">
+            <h2 class="title">Checkout Cart</h1>
+        </div>
+    </div>
 
       <div class="cart-row">
         <span class="cart-item cart-header cart-column">Item</span>  
