--- a/episode-list.html
+++ b/episode-list.html
@@ -54,7 +54,7 @@
           <a href="#" class="filter-link">Movies</a>
         </li>
         <li class="filter-item">
-          <a href="#" class="filter-link">Videogames</a>
+          <a href="#" class="filter-link">Games</a>
         </li>
         <li class="filter-item">
           <a href="#" class="filter-link">Books</a>
