CSS changes to all pages

--- a/landing_page.html
+++ b/landing_page.html
@@ -96,7 +96,7 @@
 <div class="subscription-container">
     <div class="sub-email-container">
         <div class="email-message">
-            <h1>Newsletter</h1>
+            <h1>NEWSLETTER</h1>
             <p>Never miss a episode. Sign up for out newsletter mailing list!</p>
         </div>
         <form class="email-form" action="">
@@ -109,7 +109,7 @@
     </div>
     <div class="sub-platform">
         <div class="sub-message">
-            <h1>Subscribe</h1>
+            <h1>SUBSCRIBE</h1>
             <p>Subscribe on all platforms where the show is available!</p>
         </div>
         <div class="icon-links">
