--- a/shop.html
+++ b/shop.html
@@ -148,7 +148,7 @@
     </div>
   </section> 
 
-    <button role="button" class="btn btn-purchase btn-primary">PURCHASE</button>
+    <button role="button" class="btn btn-purchase">PURCHASE</button>
     
 
     <div class="accent-div"></div>
